<resources>
    <string name="app_name">Soccer Matches</string>
    <string name="tab_text_1">Matches</string>
    <string name="tab_text_2">Teams</string>
    <string name="tab_text_3">Favorites</string>
    <string name="last_match">Last</string>
    <string name="next_match">Next</string>
    <string name="overview">Overview</string>
    <string name="players">Players</string>
    <string name="search">Search</string>
    <string name="vs">vs</string>
    <string name="match_detail">Match Detail</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="lineups">Lineups</string>
    <string name="goalkeeper">Goalkeeper</string>
    <string name="defenders">Defenders</string>
    <string name="midfielders">Midfielders</string>
    <string name="strikers">Strikers</string>
    <string name="substitutes">Substitutes</string>
    <string name="added_to_favorite">Added to favorite</string>
    <string name="remove_from_favorite">Removed from favorite</string>
    <string name="event_id">eventId</string>
    <string name="team_id">teamId</string>
    <string name="player_id">playerId</string>
    <string name="selected_item_id">selectedItemId</string>
    <string name="search_empty_hint">Please enter keyword and press search button</string>
    <string name="weight_hint">Weight (Kg)</string>
    <string name="height_hint">Height (m)</string>
</resources>
