<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/matches"
            android:enabled="true"
            android:icon="@drawable/ic_date_range_24dp"
            android:title="@string/tab_text_1"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/teams"
            android:enabled="true"
            android:icon="@drawable/ic_group_24dp"
            android:title="@string/tab_text_2"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/favorites"
            android:enabled="true"
            android:icon="@drawable/ic_star_24dp"
            android:title="@string/tab_text_3"
            app:showAsAction="ifRoom"/>
</menu>